Add translations for new items and totem usage in language files

--- a/src/main/resources/assets/monolandhardcore/lang/en_us.json
+++ b/src/main/resources/assets/monolandhardcore/lang/en_us.json
@@ -1,3 +1,6 @@
 {
-    "monoland.info": "Welcome to Monoland Hardcore!"
+    "monoland.info": "Welcome to Monoland Hardcore!",
+    "monoland.totem.used": "🪬 %s has used a totem",
+    "item.monolandhardcore.hyper_golden_heart": "Hyper Golden Heart",
+    "itemGroup.monoland_hardcore_items": "Monoland Hardcore Items"
 }
