--- a/src/main/resources/assets/monolandhardcore/lang/en_us.json
+++ b/src/main/resources/assets/monolandhardcore/lang/en_us.json
@@ -1,4 +1,7 @@
 {
+    "monoland.enabled.end": "✅ The End has been enabled.",
+    "monoland.disabled.end": "⛔ The End has been disabled.",
+    "monoland.disabled.end.info": "⛔ The End is not available yet.",
     "monoland.info": "Welcome to Monoland Hardcore!",
     "monoland.days.passed.12": "🔥 The world is getting more dangerous!",
     "monoland.totem.used": "🪬 %s has used a totem",
@@ -6,9 +9,19 @@
     "monoland.player.died": "You lost a permanent heart!",
     "monoland.storm.start": "⚡ The Torment Train begins!! ⚡",
     "monoland.storm.extend": "⏳ 30 minutes have been added to the storm!",
+    "monoland.storm.extended.day18": "⚡ One more day has passed! The storm has been extended by 60 minutes!",
     "monoland.storm.remaining": "⚡ Remaining storm: %s",
     "monoland.simulated.day.changed": "⏳ Simulated day changed to %s days ago.",
     "monoland.current.day": "📅 Current day: %s",
     "item.monolandhardcore.hyper_golden_heart": "Hyper Golden Heart",
-    "itemGroup.monoland_hardcore_items": "Monoland Hardcore Items"
+    "itemGroup.monoland_hardcore_items": "Monoland Hardcore Items",
+    "item.monolandhardcore.black_diamond": "Black Diamond",
+    "item.monolandhardcore.hyper_essence": "Hyper Essence",
+    "item.monolandhardcore.hyper_upgrade_template": "Hyper Upgrade Template",
+    "item.monolandhardcore.hyper_upgrade_template.applies_to": "Netherite Equipment",
+    "item.monolandhardcore.hyper_upgrade_template.description": "Hyper Essence",
+    "item.monolandhardcore.hyper_upgrade_template.base_slot_description": "Place a netherite armor piece here",
+    "item.monolandhardcore.hyper_upgrade_template.additions_slot_description": "Place a Hyper Essence here",
+    "upgrade.monolandhardcore.hyper_upgrade_template.base_slot": "Netherite Armor",
+    "upgrade.monolandhardcore.hyper_upgrade_template.additions_slot": "Hyper Essence"
 }
