Refactor Skeleton and Spider mob generation logic; remove unused MobsDrops class and update totem usage messages in multiple languages

--- a/src/main/resources/assets/monolandhardcore/lang/en_us.json
+++ b/src/main/resources/assets/monolandhardcore/lang/en_us.json
@@ -4,7 +4,7 @@
     "monoland.disabled.end.info": "⛔ The End is not available yet.",
     "monoland.info": "Welcome to Monoland Hardcore!",
     "monoland.days.passed.12": "🔥 The world is getting more dangerous!",
-    "monoland.totem.used": "🪬 %s has used a totem",
+    "monoland.totem.used": "✟ %s has used a totem",
     "monoland.totem.used.life": "⚠️ You lost half a permanent heart by using the totem.",
     "monoland.player.died": "You lost a permanent heart!",
     "monoland.storm.start": "⚡ The Torment Train begins!! ⚡",
