--- a/src/main/resources/assets/monolandhardcore/lang/fr_ca.json
+++ b/src/main/resources/assets/monolandhardcore/lang/fr_ca.json
@@ -4,7 +4,7 @@
     "monoland.disabled.end.info": "⛔ L'End n'est pas encore disponible.",
     "monoland.info": "Bienvenue au Monoland Hardcore !",
     "monoland.days.passed.12": "🔥 Le monde devient de plus en plus dangereux !",
-    "monoland.totem.used": "🪬 %s a utilisé un tótem",
+    "monoland.totem.used": "✟ %s a utilisé un tótem",
     "monoland.totem.used.life": "⚠️ Vous avez perdu un demi-cœur permanent en utilisant le totem.",
     "monoland.player.died": "Vous avez perdu un cœur permanent !",
     "monoland.storm.start": "⚡ Le train du Tourment commence !! ⚡",
