--- a/src/main/resources/assets/monolandhardcore/lang/es_mx.json
+++ b/src/main/resources/assets/monolandhardcore/lang/es_mx.json
@@ -4,7 +4,7 @@
     "monoland.disabled.end.info": "⛔ El End aún no está disponible.",
     "monoland.info": "Bienvenido a Monoland Hardcore!",
     "monoland.days.passed.12": "🔥 ¡El mundo es cada vez más peligroso!",
-    "monoland.totem.used": "🪬 %s ha consumido un tótem",
+    "monoland.totem.used": "✟ %s ha consumido un tótem",
     "monoland.totem.used.life": "⚠️ Perdiste medio corazón permanente al usar el tótem.",
     "monoland.player.died": "Perdiste un corazón permanente!",
     "monoland.storm.start": "⚡ ¡El tren del Tormento comienza!! ⚡",
