Update totem usage messages and add heart recovery notifications in multiple languages

--- a/src/main/resources/assets/monolandhardcore/lang/es_mx.json
+++ b/src/main/resources/assets/monolandhardcore/lang/es_mx.json
@@ -6,6 +6,8 @@
     "monoland.days.passed.12": "🔥 ¡El mundo es cada vez más peligroso!",
     "monoland.totem.used": "✟ %s ha consumido un tótem",
     "monoland.totem.used.life": "⚠️ Perdiste medio corazón permanente al usar el tótem.",
+    "monoland.heart.recovered": "❤️ ¡Has recuperado un corazón!",
+    "monoland.heart.max.recovered": "⛔ Ya tienes la vida máxima completa.",
     "monoland.player.died": "Perdiste un corazón permanente!",
     "monoland.storm.start": "⚡ ¡El tren del Tormento comienza!! ⚡",
     "monoland.storm.extend": "⏳ ¡Se han añadido 30 minutos más a la tormenta!",
