--- a/src/main/resources/assets/monolandhardcore/lang/fr_ca.json
+++ b/src/main/resources/assets/monolandhardcore/lang/fr_ca.json
@@ -6,6 +6,8 @@
     "monoland.days.passed.12": "🔥 Le monde devient de plus en plus dangereux !",
     "monoland.totem.used": "✟ %s a utilisé un tótem",
     "monoland.totem.used.life": "⚠️ Vous avez perdu un demi-cœur permanent en utilisant le totem.",
+    "monoland.heart.recovered": "❤️ Vous avez récupéré un cœur !",
+    "monoland.heart.max.recovered": "⛔ Vous avez déjà la vie maximale.",
     "monoland.player.died": "Vous avez perdu un cœur permanent !",
     "monoland.storm.start": "⚡ Le train du Tourment commence !! ⚡",
     "monoland.storm.extend": "⏳ 30 minutes ont été ajoutées à la tempête !",
