--- a/src/main/resources/assets/monolandhardcore/lang/en_us.json
+++ b/src/main/resources/assets/monolandhardcore/lang/en_us.json
@@ -6,6 +6,8 @@
     "monoland.days.passed.12": "🔥 The world is getting more dangerous!",
     "monoland.totem.used": "✟ %s has used a totem",
     "monoland.totem.used.life": "⚠️ You lost half a permanent heart by using the totem.",
+    "monoland.heart.recovered": "❤️ You have recovered a heart!",
+    "monoland.heart.max.recovered": "⛔ You already have the maximum life.",
     "monoland.player.died": "You lost a permanent heart!",
     "monoland.storm.start": "⚡ The Torment Train begins!! ⚡",
     "monoland.storm.extend": "⏳ 30 minutes have been added to the storm!",
