--- a/src/main/resources/assets/monolandhardcore/lang/en_us.json
+++ b/src/main/resources/assets/monolandhardcore/lang/en_us.json
@@ -4,9 +4,9 @@
     "monoland.disabled.end.info": "⛔ The End is not available yet.",
     "monoland.info": "Welcome to Monoland Hardcore!",
     "monoland.days.passed.12": "🔥 The world is getting more dangerous!",
-    "monoland.totem.used": "✟ %s has used a totem",
+    "monoland.totem.used": "† %s has used a totem",
     "monoland.totem.used.life": "⚠️ You lost half a permanent heart by using the totem.",
-    "monoland.heart.recovered": "❤️ You have recovered a heart!",
+    "monoland.heart.recovered": "💗 You have recovered a heart!",
     "monoland.heart.max.recovered": "⛔ You already have the maximum life.",
     "monoland.player.died": "You lost a permanent heart!",
     "monoland.storm.start": "⚡ The Torment Train begins!! ⚡",
