--- a/src/main/resources/assets/monolandhardcore/lang/es_mx.json
+++ b/src/main/resources/assets/monolandhardcore/lang/es_mx.json
@@ -4,9 +4,9 @@
     "monoland.disabled.end.info": "⛔ El End aún no está disponible.",
     "monoland.info": "Bienvenido a Monoland Hardcore!",
     "monoland.days.passed.12": "🔥 ¡El mundo es cada vez más peligroso!",
-    "monoland.totem.used": "✟ %s ha consumido un tótem",
+    "monoland.totem.used": "† %s ha consumido un tótem",
     "monoland.totem.used.life": "⚠️ Perdiste medio corazón permanente al usar el tótem.",
-    "monoland.heart.recovered": "❤️ ¡Has recuperado un corazón!",
+    "monoland.heart.recovered": "💗 ¡Has recuperado un corazón!",
     "monoland.heart.max.recovered": "⛔ Ya tienes la vida máxima completa.",
     "monoland.player.died": "Perdiste un corazón permanente!",
     "monoland.storm.start": "⚡ ¡El tren del Tormento comienza!! ⚡",
