Rename black_diamond to hyper_soul; update item group and localization files; add model and texture for hyper_soul

--- a/src/main/resources/assets/monolandhardcore/lang/en_us.json
+++ b/src/main/resources/assets/monolandhardcore/lang/en_us.json
@@ -17,7 +17,7 @@
     "monoland.current.day": "📅 Current day: %s",
     "item.monolandhardcore.hyper_golden_heart": "Hyper Golden Heart",
     "itemGroup.monoland_hardcore_items": "Monoland Hardcore Items",
-    "item.monolandhardcore.black_diamond": "Black Diamond",
+    "item.monolandhardcore.hyper_soul": "Hyper Soul",
     "item.monolandhardcore.hyper_essence": "Hyper Essence",
     "item.monolandhardcore.hyper_upgrade_template": "Hyper Upgrade",
     "item.monolandhardcore.hyper_upgrade_template.applies_to": "Netherite Equipment",
