--- a/src/main/resources/assets/monolandhardcore/lang/es_mx.json
+++ b/src/main/resources/assets/monolandhardcore/lang/es_mx.json
@@ -17,7 +17,7 @@
     "monoland.current.day": "📅 Día actual: %s",
     "item.monolandhardcore.hyper_golden_heart": "Corazón Hiper Dorada+",
     "itemGroup.monoland_hardcore_items": "Objetos Monoland",
-    "item.monolandhardcore.black_diamond": "Diamante negro",
+    "item.monolandhardcore.hyper_soul": "Esencia Hiper",
     "item.monolandhardcore.hyper_essence": "Esencia Hiper",
     "item.monolandhardcore.hyper_upgrade_template": "Mejora de Esencia Hiper",
     "item.monolandhardcore.hyper_upgrade_template.applies_to": "Equipamiento de Netherite",
