--- a/src/main/resources/assets/monolandhardcore/lang/fr_ca.json
+++ b/src/main/resources/assets/monolandhardcore/lang/fr_ca.json
@@ -17,7 +17,7 @@
     "monoland.current.day": "📅 Jour actuel : %s",
     "item.monolandhardcore.hyper_golden_heart": "Coeur d'or hyper",
     "itemGroup.monoland_hardcore_items": "Items Monoland Hardcore",
-    "item.monolandhardcore.black_diamond": "Diamant noir",
+    "item.monolandhardcore.hyper_soul": "Essence hyper",
     "item.monolandhardcore.hyper_essence": "Essence hyper",
     "item.monolandhardcore.hyper_upgrade_template": "Amélioration en essence hyper",
     "item.monolandhardcore.hyper_upgrade_template.applies_to": "Équipement en nétherite",
