Add Hyper Heart and Hyper Heart Piece items with models, textures, and crafting recipes

--- a/src/main/resources/assets/monolandhardcore/lang/en_us.json
+++ b/src/main/resources/assets/monolandhardcore/lang/en_us.json
@@ -15,9 +15,11 @@
     "monoland.storm.remaining": "⚡ Remaining storm: %s",
     "monoland.simulated.day.changed": "⏳ Simulated day changed to %s days ago.",
     "monoland.current.day": "📅 Current day: %s",
-    "item.monolandhardcore.hyper_golden_heart": "Hyper Golden Heart",
     "itemGroup.monoland_hardcore_items": "Monoland Hardcore Items",
+    "item.monolandhardcore.hyper_golden_heart": "Hyper Golden Heart",
     "item.monolandhardcore.hyper_soul": "Hyper Soul",
+    "item.monolandhardcore.hyper_heart_piece": "Hyper Heart Piece",
+    "item.monolandhardcore.hyper_heart": "Hyper Heart",
     "item.monolandhardcore.hyper_essence": "Hyper Essence",
     "item.monolandhardcore.hyper_upgrade_template": "Hyper Upgrade",
     "item.monolandhardcore.hyper_upgrade_template.applies_to": "Netherite Equipment",
