--- a/src/main/resources/assets/monolandhardcore/lang/es_mx.json
+++ b/src/main/resources/assets/monolandhardcore/lang/es_mx.json
@@ -15,9 +15,11 @@
     "monoland.storm.remaining": "⚡ Tormenta restante: %s",
     "monoland.simulated.day.changed": "⏳ Día simulado cambiado a hace %s días.",
     "monoland.current.day": "📅 Día actual: %s",
-    "item.monolandhardcore.hyper_golden_heart": "Corazón Hiper Dorada+",
     "itemGroup.monoland_hardcore_items": "Objetos Monoland",
+    "item.monolandhardcore.hyper_golden_heart": "Corazón Hiper Dorada",
     "item.monolandhardcore.hyper_soul": "Esencia Hiper",
+    "item.monolandhardcore.hyper_heart_piece": "Fragmento de Corazón Hiper",
+    "item.monolandhardcore.hyper_heart": "Corazón Hiper",
     "item.monolandhardcore.hyper_essence": "Esencia Hiper",
     "item.monolandhardcore.hyper_upgrade_template": "Mejora de Esencia Hiper",
     "item.monolandhardcore.hyper_upgrade_template.applies_to": "Equipamiento de Netherite",
