--- a/src/main/resources/assets/monolandhardcore/lang/fr_ca.json
+++ b/src/main/resources/assets/monolandhardcore/lang/fr_ca.json
@@ -15,10 +15,12 @@
     "monoland.storm.remaining": "⚡ Tempête restante : %s",
     "monoland.simulated.day.changed": "⏳ Le jour simulé a été changé à il y a %s jours.",
     "monoland.current.day": "📅 Jour actuel : %s",
-    "item.monolandhardcore.hyper_golden_heart": "Coeur d'or hyper",
     "itemGroup.monoland_hardcore_items": "Items Monoland Hardcore",
+    "item.monolandhardcore.hyper_golden_heart": "Coeur d'or hyper",
     "item.monolandhardcore.hyper_soul": "Essence hyper",
     "item.monolandhardcore.hyper_essence": "Essence hyper",
+    "item.monolandhardcore.hyper_heart_piece": "Fragment de coeur hyper",
+    "item.monolandhardcore.hyper_heart": "Coeur hyper",
     "item.monolandhardcore.hyper_upgrade_template": "Amélioration en essence hyper",
     "item.monolandhardcore.hyper_upgrade_template.applies_to": "Équipement en nétherite",
     "item.monolandhardcore.hyper_upgrade_template.description": "Essence hyper",
