Add server info messages for various game days and update language files for localization

--- a/src/main/resources/assets/monolandhardcore/lang/en_us.json
+++ b/src/main/resources/assets/monolandhardcore/lang/en_us.json
@@ -30,6 +30,69 @@
     "item.monolandhardcore.hyper_essence_chestplate": "Hyper Essence Chestplate",
     "item.monolandhardcore.hyper_essence_leggings": "Hyper Essence Leggings",
     "item.monolandhardcore.hyper_essence_boots": "Hyper Essence Boots",
+    "item.monolandhardcore.hyper_repair_item": "Hyper Repair Item",
     "upgrade.monolandhardcore.hyper_upgrade_template.base_slot": "Netherite Armor",
-    "upgrade.monolandhardcore.hyper_upgrade_template.additions_slot": "Hyper Essence"
+    "upgrade.monolandhardcore.hyper_upgrade_template.additions_slot": "Hyper Essence",
+    "item.monoland.repair.success": "🛠 Your Hyper armor has been repaired!",
+    "item.monoland.repair.not_damaged": "Your Hyper armor is not damaged.",
+    "item.monoland.repair.wrong_armor": "❌ You are not wearing the right armor.",
+    "infoserver.day0.title": "📆 Day 0 — The beginning",
+    "infoserver.day0.spiders": "All spiders now have potion effects (1 to 3).",
+    "infoserver.day0.skeletons": "Skeleton classes unlocked with different gear and health.",
+    "infoserver.day0.breezes": "Breezes have a 20% chance to drop an unbreakable shield.",
+    "infoserver.day5.title": "📆 Day 5 — First escalation",
+    "infoserver.day5.pigmans": "Piglins are angry by default.",
+    "infoserver.day5.spiders": "Spiders now have 3 to 5 effects and may carry skeletons.",
+    "infoserver.day5.ravagers": "1% of Ravagers drop a totem.",
+    "infoserver.day5.phantoms": "Phantoms are size 9 and have double health.",
+    "infoserver.day5.creepers": "Creepers are now invisible and electrified.",
+    "infoserver.day5.drops_removed": "Drops disabled for: Iron Golem, Piglin, Evoker.",
+    "infoserver.day5.creaking": "Creaking now deals x6 damage, Speed II, drops 3 notch apples and 1 totem.",
+    "infoserver.day8.title": "📆 Day 8 — Mutation begins",
+    "infoserver.day8.spiders": "Spiders always have 5 effects.",
+    "infoserver.day8.giga_slime": "Giga Slimes are 15x larger.",
+    "infoserver.day8.giga_magma": "Giga MagmaCubes are 16x larger.",
+    "infoserver.day8.ghasts": "Demonic Ghasts have 40-60 HP and large explosion radius.",
+    "infoserver.day8.new_armor": "Hyper armor can now be obtained from powerful mobs.",
+    "infoserver.day8.ravager": "Ravagers now have Strength II, Speed I, and drop totems (20%).",
+    "infoserver.day8.bees": "Bees are aggressive, have Speed II and Strength I.",
+    "infoserver.day8.endermite": "Endermites have 5 effects and triple damage.",
+    "infoserver.day10.title": "📆 Day 10 — Power infusion",
+    "infoserver.day10.skeletons": "Skeleton classes upgraded with powerful bows and armor.",
+    "infoserver.day10.creepers": "Creepers gain Speed II and Resistance II.",
+    "infoserver.day10.pigmans": "Piglins wear diamond armor.",
+    "infoserver.day10.zombies": "Zombies and Drowned wear golden armor.",
+    "infoserver.day10.pillagers": "Pillagers have Invisibility and Quick Charge X.",
+    "infoserver.day10.endermen": "Endermen gain Strength II.",
+    "infoserver.day10.silverfish": "Silverfish now get 5 effects like spiders.",
+    "infoserver.day14.title": "📆 Day 14 — Rising terror",
+    "infoserver.day14.drop_update": "Drops reduced: Giga mobs and Cave Spiders.",
+    "infoserver.day14.creaking": "Creaking drops buffed (20%).",
+    "infoserver.day14.spiders": "All spiders are now Cave Spiders.",
+    "infoserver.day14.death_storm": "‘Death Storm’ can inflict blindness (1 min, stackable).",
+    "infoserver.day14.ghast_attack": "Ghast impacts apply Levitation 50 and Wither V.",
+    "infoserver.day14.endermen": "Some Endermen become hostile.",
+    "infoserver.day14.guardians": "Guardians gain Speed III and Resistance II.",
+    "infoserver.day14.shulkers": "Exploding shulkers drop shells (20%).",
+    "infoserver.day14.ultra_ravager": "Ultra Ravagers (25% spawn chance), mounted by armored piglins.",
+    "infoserver.day14.end_event": "End battle begins: Dragon has 1000 HP and regenerates crystals every 8 min.",
+    "infoserver.day20.title": "📆 Day 20 — Nightmare unleashed",
+    "infoserver.day20.skeletons": "Skeleton classes receive max-level gear and HP boosts.",
+    "infoserver.day20.spiders": "Attacks apply Poison III (6s) and Nausea (5s).",
+    "infoserver.day20.blazes": "Blazes have 100 HP.",
+    "infoserver.day20.shulkers": "Shulker drop rate reduced to 2%.",
+    "infoserver.day20.phantoms": "1/100 Phantoms replaced with Ender Ghasts (with 5 effects).",
+    "infoserver.day20.ravagers": "All Ravagers are now Ultra, but no longer drop totems.",
+    "infoserver.day20.llamas": "Llama spit gives Poison III (30s), Nausea (10s), Knockback III.",
+    "infoserver.day20.vexes": "Vexes gain Resistance III.",
+    "infoserver.day20.vindicators": "Vindicators have diamond axe with Sharpness V.",
+    "infoserver.day20.giants": "Giant Zombies have 300 HP and drop a bow with Power X.",
+    "infoserver.day20.wither_emperor": "1/50 Wither Skeletons are Emperors with massive drops.",
+    "infoserver.day25.title": "📆 Day 25 — Final catastrophe",
+    "infoserver.day25.endermen": "Endermen have Strength X.",
+    "infoserver.day25.drowned": "Drowned deal triple damage.",
+    "infoserver.day25.vexes": "Vexes gain Strength III.",
+    "infoserver.day25.phantoms": "25% of Phantoms are Ender Ghasts.",
+    "infoserver.day25.vindicators": "Vindicators now get 5 random effects.",
+    "infoserver.day25.skeletons": "Skeleton classes now reach absurd gear stats and HP."
 }
