--- a/src/main/resources/assets/monolandhardcore/lang/es_mx.json
+++ b/src/main/resources/assets/monolandhardcore/lang/es_mx.json
@@ -30,6 +30,69 @@
     "item.monolandhardcore.hyper_essence_chestplate": "Pechera de Esencia Hiper",
     "item.monolandhardcore.hyper_essence_leggings": "Pantalones de Esencia Hiper",
     "item.monolandhardcore.hyper_essence_boots": "Botas de Esencia Hiper",
+    "item.monolandhardcore.hyper_repair_item": "Elemento de Reparación Hiper",
     "upgrade.monolandhardcore.hyper_upgrade_template.base_slot": "Netherite Armor",
-    "upgrade.monolandhardcore.hyper_upgrade_template.additions_slot": "Hyper Essence"
+    "upgrade.monolandhardcore.hyper_upgrade_template.additions_slot": "Hyper Essence",
+    "item.monoland.repair.success": "🛠 ¡Tu armadura Hyper ha sido reparada!",
+    "item.monoland.repair.not_damaged": "Tu armadura Hyper no está dañada.",
+    "item.monoland.repair.wrong_armor": "❌ No llevas puesta la armadura correcta.",
+    "infoserver.day0.title": "📆 Día 0 — El comienzo",
+    "infoserver.day0.spiders": "¡Todas las arañas ahora tienen efectos de poción (1 a 3)!",
+    "infoserver.day0.skeletons": "Esqueletos de clase desbloqueados con equipo y vida variados.",
+    "infoserver.day0.breezes": "Las Breezes tienen 20% de probabilidad de soltar un escudo irrompible.",
+    "infoserver.day5.title": "📆 Día 5 — Primera escalada",
+    "infoserver.day5.pigmans": "Los pigmans están enojados desde el principio.",
+    "infoserver.day5.spiders": "Arañas con 3 a 5 efectos y esqueleto montado.",
+    "infoserver.day5.ravagers": "1% de los Ravagers sueltan un tótem.",
+    "infoserver.day5.phantoms": "Phantoms tamaño 9 con el doble de vida.",
+    "infoserver.day5.creepers": "Creepers invisibles y electrificados.",
+    "infoserver.day5.drops_removed": "Drops desactivados: Gólem de hierro, Pigman, Evoker.",
+    "infoserver.day5.creaking": "Creaking hace x6 daño, Speed II y dropea 3 manzanas notch + 1 tótem.",
+    "infoserver.day8.title": "📆 Día 8 — Comienza la mutación",
+    "infoserver.day8.spiders": "Arañas siempre tienen 5 efectos.",
+    "infoserver.day8.giga_slime": "Giga Slimes 15 veces más grandes.",
+    "infoserver.day8.giga_magma": "Giga MagmaCubes 16 veces más grandes.",
+    "infoserver.day8.ghasts": "Ghasts demoníacos con 40–60 de vida y gran explosión.",
+    "infoserver.day8.new_armor": "Ahora se puede conseguir armadura Hyper de mobs fuertes.",
+    "infoserver.day8.ravager": "Ravagers con Fuerza II, Velocidad I y 20% de dropear tótem.",
+    "infoserver.day8.bees": "Abejas agresivas con Speed II y Fuerza I.",
+    "infoserver.day8.endermite": "Endermites con 5 efectos y triple daño.",
+    "infoserver.day10.title": "📆 Día 10 — Infusión de poder",
+    "infoserver.day10.skeletons": "Esqueletos mejorados con arcos poderosos y armaduras.",
+    "infoserver.day10.creepers": "Creepers con Velocidad II y Resistencia II.",
+    "infoserver.day10.pigmans": "Pigmans ahora tienen armadura de diamante.",
+    "infoserver.day10.zombies": "Zombies y Drowned con armadura de oro.",
+    "infoserver.day10.pillagers": "Pillagers con Invisibilidad y Quick Charge X.",
+    "infoserver.day10.endermen": "Endermans con Fuerza II.",
+    "infoserver.day10.silverfish": "Silverfish con 5 efectos como las arañas.",
+    "infoserver.day14.title": "📆 Día 14 — Terror creciente",
+    "infoserver.day14.drop_update": "Drops reducidos: Giga mobs y arañas de cueva.",
+    "infoserver.day14.creaking": "Creaking ahora tiene 20% de dropear botín.",
+    "infoserver.day14.spiders": "Todas las arañas ahora son de cueva.",
+    "infoserver.day14.death_storm": "Tormenta mortal puede dar ceguera (1 min, acumulable).",
+    "infoserver.day14.ghast_attack": "Impactos de ghast aplican Levitación 50 y Wither V.",
+    "infoserver.day14.endermen": "Algunos endermans se vuelven hostiles.",
+    "infoserver.day14.guardians": "Guardianes con Speed III y Resistencia II.",
+    "infoserver.day14.shulkers": "Shulkers explosivos con 20% de soltar shell.",
+    "infoserver.day14.ultra_ravager": "Ultra Ravagers (25% de aparición), montados por pigmans armados.",
+    "infoserver.day14.end_event": "Batalla del End: Dragona con 1000 HP y regenera cristales cada 8 min.",
+    "infoserver.day20.title": "📆 Día 20 — Pesadilla desatada",
+    "infoserver.day20.skeletons": "Esqueletos con equipo máximo y vida mejorada.",
+    "infoserver.day20.spiders": "Arañas aplican Veneno III (6s) y Náusea (5s).",
+    "infoserver.day20.blazes": "Blazes con 100 de vida.",
+    "infoserver.day20.shulkers": "Shulkers ahora solo dropean 2%.",
+    "infoserver.day20.phantoms": "1/100 Phantoms son Ender Ghasts con efectos.",
+    "infoserver.day20.ravagers": "Todos los Ravagers son Ultra, pero ya no dropean tótems.",
+    "infoserver.day20.llamas": "Llamas aplican Veneno III (30s), Náusea (10s), Knockback III.",
+    "infoserver.day20.vexes": "Vexes con Resistencia III.",
+    "infoserver.day20.vindicators": "Vindicators con hacha de diamante y Sharpness V.",
+    "infoserver.day20.giants": "Zombies gigantes con 300 HP, dropean arco Power X.",
+    "infoserver.day20.wither_emperor": "1/50 Withers son Emperadores con drops masivos.",
+    "infoserver.day25.title": "📆 Día 25 — Catástrofe final",
+    "infoserver.day25.endermen": "Endermans con Fuerza X.",
+    "infoserver.day25.drowned": "Drowned hacen triple daño.",
+    "infoserver.day25.vexes": "Vexes con Fuerza III.",
+    "infoserver.day25.phantoms": "25% de Phantoms son Ender Ghasts.",
+    "infoserver.day25.vindicators": "Vindicators tienen 5 efectos aleatorios.",
+    "infoserver.day25.skeletons": "Esqueletos con equipo extremadamente roto y vida mejorada."
 }
