--- a/src/main/resources/assets/monolandhardcore/lang/fr_ca.json
+++ b/src/main/resources/assets/monolandhardcore/lang/fr_ca.json
@@ -30,6 +30,70 @@
     "item.monolandhardcore.hyper_essence_chestplate": "Plastron d'essence hyper",
     "item.monolandhardcore.hyper_essence_leggings": "Jambières d'essence hyper",
     "item.monolandhardcore.hyper_essence_boots": "Bottes d'essence hyper",
+    "item.monolandhardcore.hyper_repair_item": "Objet de réparation hyper",
     "upgrade.monolandhardcore.hyper_upgrade_template.base_slot": "Armure en nétherite",
-    "upgrade.monolandhardcore.hyper_upgrade_template.additions_slot": "Essence hyper"
+    "upgrade.monolandhardcore.hyper_upgrade_template.additions_slot": "Essence hyper",
+    "item.monoland.repair.success": "🛠 Votre armure hyper a été réparée !",
+    "item.monoland.repair.not_damaged": "Votre armure hyper n'est pas endommagée.",
+    "item.monoland.repair.wrong_armor": "❌ Vous ne portez pas la bonne armure.",
+    "infoserver.day0.title": "📆 Jour 0 — Le début",
+    "infoserver.day0.spiders": "Toutes les araignées ont maintenant des effets de potion (1 à 3).",
+    "infoserver.day0.skeletons": "Classes de squelettes débloquées avec différents équipements et santé.",
+    "infoserver.day0.breezes": "Les brises ont 20 % de chances de lâcher un bouclier incassable.",
+    "infoserver.day5.title": "📆 Jour 5 — Première escalade",
+    "infoserver.day5.pigmans": "Les piglins sont en colère par défaut.",
+    "infoserver.day5.spiders": "Les araignées ont maintenant 3 à 5 effets et peuvent porter des squelettes.",
+    "infoserver.day5.ravagers": "1 % des ravageurs lâchent un totem.",
+    "infoserver.day5.phantoms": "Les fantômes sont de taille 9 et ont deux fois plus de santé.",
+    "infoserver.day5.creepers": "Les creepers sont maintenant invisibles et électrisés.",
+    "infoserver.day5.drops_removed": "Chutes désactivées pour : Golem de fer, Piglin, Évocateur.",
+    "infoserver.day5.creaking": "Creaking inflige maintenant x6 de dégâts, Vitesse II, lâche 3 pommes notch et 1 totem.",
+    "infoserver.day8.title": "📆 Jour 8 — La mutation commence",
+    "infoserver.day8.spiders": "Les araignées ont toujours 5 effets.",
+    "infoserver.day8.giga_slime": "Les Giga Slimes sont 15 fois plus grands.",
+    "infoserver.day8.giga_magma": "Les Giga MagmaCubes sont 16 fois plus grands.",
+    "infoserver.day8.ghasts": "Les Ghasts démoniaques ont 40-60 PV et un grand rayon d'explosion.",
+    "infoserver.day8.new_armor": "L'armure hyper peut maintenant être obtenue à partir de mobs puissants.",
+    "infoserver.day8.ravager": "Les ravageurs ont maintenant Force II, Vitesse I et lâchent des totems (20 %).",
+    "infoserver.day8.bees": "Les abeilles sont agressives, ont Vitesse II et Force I.",
+    "infoserver.day8.endermite": "Les endermites ont 5 effets et infligent des dégâts triples.",
+    "infoserver.day10.title": "📆 Jour 10 — Infusion de pouvoir",
+    "infoserver.day10.skeletons": "Les squelettes sont améliorés avec des arcs puissants et des armures.",
+    "infoserver.day10.creepers": "Les creepers ont Vitesse II et Résistance II.",
+    "infoserver.day10.pigmans": "Les piglins ont maintenant une armure en diamant.",
+    "infoserver.day10.zombies": "Les zombies et les noyés ont une armure en or.",
+    "infoserver.day10.pillagers": "Les pillards ont Invisibilité et Charge rapide X.",
+    "infoserver.day10.endermen": "Les endermans ont Force II.",
+    "infoserver.day10.silverfish": "Les silverfish ont 5 effets comme les araignées.",
+    "infoserver.day10.creaking": "Creaking a maintenant 20 % de chances de lâcher du butin.",
+    "infoserver.day14.title": "📆 Jour 14 — La terreur grandissante",
+    "infoserver.day14.drop_update": "Chutes réduites : Giga mobs et araignées de caverne.",
+    "infoserver.day14.creaking": "Creaking a maintenant 20 % de chances de lâcher du butin.",
+    "infoserver.day14.spiders": "Toutes les araignées sont maintenant des araignées de caverne.",
+    "infoserver.day14.death_storm": "Tempête mortelle peut donner cécité (1 min, cumulable).",
+    "infoserver.day14.ghast_attack": "Les impacts de ghast infligent Lévitation 50 et Wither V.",
+    "infoserver.day14.endermen": "Certains endermans deviennent hostiles.",
+    "infoserver.day14.guardians": "Les gardiens ont Vitesse III et Résistance II.",
+    "infoserver.day14.shulkers": "Les shulkers explosifs lâchent des coquilles (20 %).",
+    "infoserver.day14.ultra_ravager": "Ultra Ravagers (25 % de chances d'apparaître), montés par des piglins armés.",
+    "infoserver.day14.end_event": "Événement de fin : Dragon avec 1000 PV et régénère des cristaux toutes les 8 minutes.",
+    "infoserver.day20.title": "📆 Jour 20 — Le cauchemar se déchaîne",
+    "infoserver.day20.skeletons": "Les squelettes ont un équipement amélioré et une santé améliorée.",
+    "infoserver.day20.spiders": "Les araignées infligent Poison III (6s) et Nausée (5s).",
+    "infoserver.day20.blazes": "Les blazes ont 100 PV.",
+    "infoserver.day20.shulkers": "Les shulkers ne lâchent maintenant que 2 %.",
+    "infoserver.day20.phantoms": "1/100 des phantoms sont des Ender Ghasts avec des effets.",
+    "infoserver.day20.ravagers": "Tous les ravageurs sont maintenant ultra, mais ne lâchent plus de totems.",
+    "infoserver.day20.llamas": "Les lamas infligent Poison III (30s), Nausée (10s), Repoussement III.",
+    "infoserver.day20.vexes": "Les vexes ont Force III.",
+    "infoserver.day20.vindicators": "Les vindicateurs ont une hache en diamant et Sharpness V.",
+    "infoserver.day20.giants": "Les géants zombies ont 300 PV, lâchent un arc Power X.",
+    "infoserver.day20.wither_emperor": "1/50 des withers sont des empereurs avec des chutes massives.",
+    "infoserver.day25.title": "📆 Jour 25 — La catastrophe finale",
+    "infoserver.day25.endermen": "Les endermans ont Force X.",
+    "infoserver.day25.drowned": "Les noyés infligent des dégâts triples.",
+    "infoserver.day25.vexes": "Les vexes ont Force III.",
+    "infoserver.day25.phantoms": "25 % des phantoms sont des Ender Ghasts.",
+    "infoserver.day25.vindicators": "Les vindicateurs ont maintenant 5 effets aléatoires.",
+    "infoserver.day25.skeletons": "Les squelettes ont maintenant des statistiques d'équipement absurdes et de la santé."
 }
